--- a/src/app/web/routes/results/results-admin/results-admin.component.html
+++ b/src/app/web/routes/results/results-admin/results-admin.component.html
@@ -1,8 +1,8 @@
 <page-header [title]="competition.title"></page-header>
 
-<mat-tab-group [hidden]="hasChildren">
+<mat-tab-group [selectedIndex]="active_tab" (selectedIndexChange)="setActiveTab($event)" [hidden]="hasChildren">
     <mat-tab *ngFor="let _class of competition.classes" [label]="_class|titlecase">
-        <app-results [classes]="[_class]"></app-results>
+        <app-results [classes]="[_class]" [is_admin]="true"></app-results>
     </mat-tab>
 </mat-tab-group>
 
