--- a/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
+++ b/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
@@ -48,9 +48,23 @@
                         </h4>
                     </mat-card-title>
                     <mat-card-subtitle>
-                        <a [routerLink]="['/public', 'athlet', 'register', competition.id]"
-                           *ngIf="!competition.stop_registration"
-                           target="_blank">Публичная страница</a>
+                        <ul>
+                            <li>
+                                <a [routerLink]="['/public', 'athlet', 'register', competition.id]"
+                                   *ngIf="!competition.stop_registration"
+                                   target="_blank">Публичная страница</a>
+                            </li>
+                            <li>
+                                <a [routerLink]="['/public', 'competition', competition.id]"
+                                   *ngIf="!competition.stop_registration"
+                                   target="_blank">Зарегистрированные атлеты</a>
+                            </li>
+                            <li>
+                                <a [routerLink]="['/public', 'competition', competition.id, 'results']"
+                                   *ngIf="!competition.stop_registration"
+                                   target="_blank">Результаты</a>
+                            </li>
+                        </ul>
                     </mat-card-subtitle>
                 </mat-card-header>
 
