--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -18,8 +18,8 @@
             </FormattedString>
         </Label>
     </StackLayout>
-    <StackLayout row="1" col="0" class="p-t-10">
-        <GridLayout columns="2*, *" rows="auto">
+    <StackLayout row="1" col="0">
+        <GridLayout columns="2*, *" rows="auto, auto">
             <TextField [hint]="'Athlete number'|L"
                        [text]="input_number"
                        (textChange)="onTextChange($event)"
@@ -33,12 +33,17 @@
             <Button [text]="'Mark'|L"
                     (tap)="setNumberMark(textField)"
                     [isEnabled]="last_athlet ? true : false" col="1" row="0"></Button>
+            <Label [text]="(foundedNumbers$ | async)"
+                   col="0" colSpan="2"
+                   row="1"
+                   textWrap="false" class="p-l-15 p-r-15"></Label>
         </GridLayout>
     </StackLayout>
     <Button [text]="activityIndicator.busy ? ('Stop scanning NFC'|L): ('Scanning NFC tag'|L)"
             (tap)="(activityIndicator.busy = !activityIndicator.busy)"
             [rowSpan]="_competition.selected_competition.checking.indexOf('barcode') > -1 ? 1 : 2"
             [class.-primary]="!activityIndicator.busy"
+            [isEnabled]="nfc.available"
             row="2"
             col="0"
             class="btn"></Button>
