--- a/src/app/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
+++ b/src/app/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
@@ -16,7 +16,7 @@
                     (tap)="onSplitBySize()"></Button>
             <Button class="btn -active"
                     [text]="'Create groups by\nresults of previous stage'|L"
-                    [isEnabled]="false"
+                    [isEnabled]="size ? size <= params.context['maxSize'] :!!size"
                     (tap)="onSplitByStage()"></Button>
             <Button class="btn -active"
                     [text]="'Create group'|L"
