--- a/src/app/web/routes/dashboard/dashboard-edit/dashboard-edit.component.html
+++ b/src/app/web/routes/dashboard/dashboard-edit/dashboard-edit.component.html
@@ -4,7 +4,8 @@
         <mat-card-title class="text-center m-b-24">{{competition.title}}</mat-card-title>
         <mat-card-subtitle class="text-center m-b-24">Изменение участника</mat-card-subtitle>
         <mat-card-content>
-            <athlet-change [competition]="competition" [athlet]="athlet"
+            <athlet-change [competition]="competition"
+                           [athlet]="athlet"
                            (onCreated)="onCreated($event)"></athlet-change>
         </mat-card-content>
     </mat-card>
