--- a/src/app/athlet/athlet-detail/athlet-detail.component.tns.html
+++ b/src/app/athlet/athlet-detail/athlet-detail.component.tns.html
@@ -1,4 +1,5 @@
-<ActionBar [title]="('Athlete: '|L) + athlet.number">
+<ActionBar *ngIf="actions"
+           [title]="('Athlete: '|L) + athlet.number">
     <NavigationButton icon="res://round_menu_black_24"
                       (tap)="onDrawerButtonTap()"></NavigationButton>
     <ActionItem [text]="'Call'|L"
@@ -13,14 +14,22 @@
                 (tap)="onTapQr()"
                 ios.position="right"
                 android.position="popup"></ActionItem>
+    <ActionItem [text]="'Is missing'|L"
+                (tap)="onGetOff()"
+                ios.position="right"
+                android.position="popup"></ActionItem>
 </ActionBar>
 <GridLayout rows="auto, auto, *" columns="*" class="p-l-10 p-r-10">
     <StackLayout row="0" col="0">
+        <Label [text]="('Status: '|L) + getOffStatus()"
+               [class.-warning]="athlet.get_off"
+               class="font-weight-bold"></Label>
+
         <Label [text]="'NFC: ' + (athlet.nfc_id ? athlet.nfc_id : ('not assigned'|L))"
                [class.-warning]="!athlet.nfc_id"
                class="font-weight-bold"></Label>
 
-        <Label [text]="'Start group: ' + getGroup()"
+        <Label [text]="('Start group: '|L) + getGroup()"
                [class.-warning]="!athlet.group"
                class="font-weight-bold"></Label>
 
@@ -34,7 +43,12 @@
                 (tap)="onClearNfc()"
                 class="btn -outline"></Button>
     </StackLayout>
-    <StackLayout row="1" col="0">
+    <GridLayout *ngIf="!actions" row="1" col="0" columns="*, *, *" class="font-small ">
+        <Button [text]="'Call'|L" (tap)="onPhone()" col="0" class="-grey" textWrap="true"></Button>
+        <Button [text]="'Send sms'|L" (tap)="onSms()" col="1" class="-grey" textWrap="true"></Button>
+        <Button [text]="'Is missing'|L" (tap)="onGetOff()" col="2" class="-warning" textWrap="true"></Button>
+    </GridLayout>
+    <StackLayout row="2" col="0">
         <Button [text]="activityIndicator.busy ? ('Stop scan'|L) :('Set NFC tag'|L) "
                 (tap)="(activityIndicator.busy = !activityIndicator.busy)"
                 [class.-primary]="!activityIndicator.busy"
