--- a/src/app/start-list/start-list-group/start-list-group.component.tns.html
+++ b/src/app/start-list/start-list-group/start-list-group.component.tns.html
@@ -67,22 +67,37 @@
                 <StackLayout class="p-0 m-0">
                     <GridLayout columns="auto, *, auto" class="rad-list" [class.odd]="odd">
                         <Label col="0" text="&#xf053;" class="fas checking"></Label>
-                        <GridLayout col="1" columns="60, *" rows="*, *, *, *" [class.odd]="odd">
+                        <GridLayout col="1" columns="60, *" rows="*, *" [class.odd]="odd">
 
-                            <Label [text]="athlet.number" col="0" row="0" rowSpan="3" class="number"
-                                   verticalAlignment="center" horizontalAlignment="center"></Label>
+                            <Label [text]="athlet.number"
+                                   col="0"
+                                   row="0"
+                                   class="number"
+                                   [class.-warning]="athlet.get_off"
+                                   verticalAlignment="center"
+                                   horizontalAlignment="center"></Label>
 
-                            <Label [text]="athlet.class" col="0" row="3" class="option p-r-4 p-l-4" horizontalAlignment="center"></Label>
+                            <Label [text]="athlet.class" col="0" row="1" class="option p-r-4 p-l-4" horizontalAlignment="center"></Label>
 
-                            <Label [text]="athlet.fio" col="1" row="0" class="option"></Label>
+                            <StackLayout col="1" row="0" rowSpan="2" orientation="vertical">
+                                <Label [text]="athlet.fio" class="option"></Label>
 
-                            <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))"
-                                   [class.-warning]="!athlet.nfc_id"
-                                   col="1" row="1" class="option"></Label>
-                            <Label [text]="('Group: '|L) + athlet.group[_competition.selected_competition.id].id"
-                                   col="1" row="2" class="option"></Label>
-                            <Label [text]="('Start time: '|L) + getStartTime(athlet)"
-                                   col="1" row="3" class="option font-weight-bold"></Label>
+                                <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))"
+                                       [class.-warning]="!athlet.nfc_id"
+                                       class="option"></Label>
+
+                                <Label [text]="('Group: '|L) + athlet.group[_competition.selected_competition.id].id"
+                                        class="option"></Label>
+
+                                <Label *ngIf="athlet.get_off"
+                                       [text]="('Status: '|L) + athlet.get_off"
+                                       class="option -warning"></Label>
+
+                                <Label [text]="('Start time: '|L) + getStartTime(athlet)"
+                                       class="option font-weight-bold"></Label>
+                            </StackLayout>
+
+
 
                         </GridLayout>
                         <Label col="2" text="&#xf054;" class="fas checking"></Label>
