--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -1,3 +1,11 @@
+<!--<StackLayout class="p-l-10 p-r-10">-->
+<!--<GridLayout *ngIf="!actions" row="1" col="0" columns="*, *, *" class="font-small ">-->
+<!--    <Button [text]="'Call'|L" (tap)="onPhone()" col="0" class="-grey p-8" textWrap="true"></Button>-->
+<!--    <Button [text]="'Send sms'|L" (tap)="onSms()" col="1" class="-grey p-8" textWrap="true"></Button>-->
+<!--    <Button [text]="'Is missing'|L" (tap)="onGetOff()" col="2" class="-warning p-8" textWrap="true"></Button>-->
+<!--</GridLayout>-->
+<!--</StackLayout>-->
+
 <ScrollView [ngSwitch]="competition">
     <StackLayout *ngSwitchDefault class="p-10">
         <Label class="h1" [text]="competition.title" textWrap="true"></Label>
